syntax = "proto3";

option csharp_namespace = "CheeseAPI";

package CheeseAPI;

service CheeseAPI {

/*
    1. 시세 TR 리스트
*/

/*
        1.2 선물 시세 TR 리스트
*/

    /* 선물 현재가 (FC) */
    rpc LookupFutureCurrentPrice (FutureCurrentPriceRequest) returns
    (FutureCurrentPriceResponse);

    /* 선물 호가 (FH) */
    rpc LookupFutureLimitOrderBook (FutureLimitOrderBookRequest) returns
    (FutureLimitOrderBookResponse);

    /* 연결선물 분/일 데이터 (TR_FNCHART) */
    rpc LookupContinuousFutureCandle (ContinuousFutureCandleRequest) returns
    (ContinuousFutureCandleResponse);

/*
        1.3 기타 시세 TR 리스트
*/

    /* 선물 종목 코드 조회 (fut_mst) */
    rpc LookupFuturesInfo (Empty) returns (FuturesInfoResponse);

/*
    2. 업무 TR 리스트
*/

/*
        2.1 현물 TR 리스트
*/

    /* 계좌별 증거금 및 잔고현황 (SABA602Q1) */
    rpc LookupAccountDepositInfo (AccountDepositInfoRequest) returns
    (AccountDepositInfoResponse);

/*
        2.2 선물/옵션, 주식선물, 상품선물 TR
*/

    /* 선물/옵션, 주식선물, 상품선물 일반 주문(매도/매수/정정/취소) (SABC100U1) */
    rpc TradeFutureOption (TradeFutureOptionRequest) returns 
    (TradeFutureOptionResponse);

    /* 선물/옵션, 주식선물, 상품선물 예수금 내역조회 (SABC952Q1) */
    rpc LookupFutureOptionDeposit (FutureOptionDepositRequest) returns
    (FutureOptionDepositResponse);

    /* 선물/옵션, 주식선물, 상품선물 잔고 조회 (SABC967Q1) */
    rpc LookupFutureOptionContract (FutureOptionContractRequest) returns
    (FutureOptionContractResponse);

    /* 선물옵션 매매내역 조회 (SABC203Q2) */
    rpc LookupFutureOptionTradingHistory (FutureOptionTradingHistoryRequest) returns (FutureOptionTradingHistoryResponse);

/*
        2.3 업무 기타 TR
*/

    /* 계좌목록조회 (AccountList) */
    rpc LookupAccountList (Empty) returns (AccountListResponse);

    /* 예수금전환 (SACA108U1) */
    rpc TransferDeposit (TransferDepositRequest) returns
    (TransferDepositResponse);

    /* 전환가능예수금조회 (SACA111Q1) */
    rpc LookupTransferableDeposit (LookupTransferableDepositRequest) returns
    (LookupTransferableDepositResponse);

/*
    3. 시세 실시간 TR 리스트
*/

    /* 선물 현재가 실시간 (FC) */
    rpc LookupFutureCurrentPriceRealtime (FutureCurrentPriceRequest) returns
    (stream FutureCurrentPriceResponse);

    /* 선물 호가 실시간 (FH) */
    rpc LookupFutureLimitOrderBookRealtime (FutureLimitOrderBookRequest) returns
    (stream FutureLimitOrderBookResponse);
}

/*
    Enums
*/

enum FutureOptionSep {
    ALL = 0; // 전체
    FUTURE = 1; // 선물
    CALL = 2; // 콜옵션
    PUT = 3; // 풋옵션
}

enum TradeCondition {
    NORMAL = 0; // 일반
    IOC = 1; // IOC
    FOK = 2; // FOK
}

enum TradeSep {
    BID = 0; // 매수
    ASK = 1; // 매도
    CANCEL = 2; // 취소
    MODIFY = 3; // 정정
}

enum OrderClassification {
    LIMIT = 0; // 지정가
    MARKET = 1; // 시장가
    CONDITIONAL = 2; // 조건부
    BEST = 3; // 최유리
}

enum GraphType {
    MINUTE = 0; // 분
    DAY = 1; // 일
}

/*
    Common Messages
*/

message Empty {}

message Date {
    int32 year = 1; // 년
    int32 month = 2; // 월
    int32 day = 3; // 일
}

message Time {
    int32 hour = 1; // 시
    int32 minute = 2; // 분
    int32 second = 3; // 초
    int32 millisecond = 4; // 밀리초
}

message Candle {
    Date date = 1; // 일자
    Time time = 2; // 시간
    int32 open = 3; // 시가
    int32 high = 4; // 고가
    int32 low = 5; // 저가
    int32 close = 6; // 종가
    optional int32 volume = 7; // 거래량
}

message LimitOrder {
    int32 order_level = 1;
    int32 price = 2;
    int32 amount = 3;
    optional int32 count = 4;
}

/*
    Messages
*/

/*
    1. 시세 TR 리스트
*/

/*
        1.2 선물 시세 TR 리스트
*/

/* 선물 현재가 (FC) */

message FutureCurrentPriceRequest {
    string code = 1; // 종목코드
}

message FutureCurrentPriceResponse {
    string code = 1; // 종목코드
    int32 time = 2; // 시간
    int32 price = 3; // 현재가
    int32 amount = 4; // 체결수량
    int32 bid_price = 5; // 매수호가
    int32 ask_price = 6; // 매도호가
    optional int32 open_interest = 7; // 미결제약정수량
}

/* 선물 호가 (FH) */

message FutureLimitOrderBookRequest {
    string code = 1; // 종목코드
}

message FutureLimitOrderBookResponse {
    int32 time = 1; // 시간
    repeated LimitOrder bid = 2; // 매수호가
    repeated LimitOrder ask = 3; // 매도호가
    int32 total_bid_amount = 4; // 총매수잔량
    int32 total_ask_amount = 5; // 총매도잔량
    int32 total_bid_count = 6; // 총매수건수
    int32 total_ask_count = 7; // 총매도건수
    int32 market_status_code = 8; // 장상태코드
    int32 expected_price = 9; // 예상체결가
}

/* 연결선물 분/일 데이터 (TR_FNCHART) */

message ContinuousFutureCandleRequest {
    string code = 1; // 종목코드
    GraphType graph_type = 2; // 그래프구분
    int32 interval = 3;
    Date start_date = 4; // 조회시작일
    Date end_date = 5; // 조회종료일
    int32 count = 6; // 조회개수
}

message ContinuousFutureCandleResponse {
    repeated Candle list = 1;
}

/*
        1.3 기타 시세 TR 리스트
*/

/* 선물 종목 코드 조회 (fut_mst) */

message FuturesInfo {
    string standard_code = 1; // 표준 코드
    string abbr_code = 2; // 단축 코드
    string name = 3; // 종목명
    string abbr_name = 4; // 축약종목명
    string supplement_code = 5; // 종목보조코드
    optional string spread_back_month_standard_code = 6; // 스프레드근월물표준코드
    optional string spread_lead_month_standard_code = 7; // 스프레드원월물표준코드
    Date final_trade_date = 8; // 최종거래일
    Date base_asset_code = 9; // 기초자산코드
    int32 multiplier = 10; // 거래승수
}

message FuturesInfoResponse {
    repeated FuturesInfo list = 1;
}

/*
    2. 업무 TR 리스트
*/

/*
        2.1 현물 TR 리스트
*/

/* 계좌별 증거금 및 잔고현황 (SABA602Q1) */

message AccountDepositInfoRequest {
    string account_number = 1; // 계좌번호
    string password = 2; // 비밀번호
}

message AccountDepositInfoResponse {
    int32 total_deposit = 1; // 총예수금
    int32 tradable_deposit = 2; // 거래가능금액
    int32 withdrawal_amount = 3; // 출금가능금액
}

/*
        2.2 선물/옵션, 주식선물, 상품선물 TR
*/

/* 선물/옵션, 주식선물, 상품선물 일반 주문(매도/매수/정정/취소) (SABC100U1) */

message TradeFutureOptionRequest {
    string account_number = 1; // 계좌번호
    string password = 2; // 비밀번호
    string stock_code = 3; // 종목코드
    int32 transaction_amount = 4; // 주문수량
    int32 price = 5; // 주문 단가
    TradeCondition trade_condition = 6; // 주문조건
    TradeSep trade_classification = 7; // 매매구분
    OrderClassification order_classification = 8; // 호가유형
    optional int32 arbitrage = 9; // 차익거래구분 1: 차익, 2: 헷지, 3: 기타
    optional int32 modify_amount = 10; // 정정취소수량구분 0: 신규, 1: 전부, 2: 일부
    optional string original_order_number = 11; // 원주문번호, 신규매도/매수 시 생략
    optional string reservation_order = 12; // 예약주문여부 1: 예약, 예약이 아닌 경우 생략
}

message TradeFutureOptionResponse {
    string order_number = 1; // 주문번호
    string orc_order_number = 2; // ORC 주문번호
}

/* 선물/옵션, 주식선물, 상품선물 예수금 내역조회 (SABC952Q1) */

message FutureOptionDepositRequest {
    string account_number = 1; // 계좌번호
    string password = 2; // 비밀번호
}

message FutureOptionDepositResponse {
    int32 total_deposit = 1; // 총예수금
    int32 tradable_deposit = 2; // 거래가능금액
    int32 withdrawal_amount = 3; // 출금가능금액
}

/* 선물/옵션, 주식선물, 상품선물 잔고 조회 (SABC967Q1) */

message FutureOptionContractRequest {
    string account_number = 1; // 계좌번호
    string password = 2; // 비밀번호
}

message FutureOptionContract {
    string code = 1; // 종목코드
    TradeSep trade_sep = 2; // 매매구분
    int32 amount = 3;
    int32 closable_amount = 4; // 청산가능수량
}

message FutureOptionContractResponse {
    repeated FutureOptionContract list = 1;
}

/* 선물옵션 매매내역 조회 (SABC203Q2) */

message FutureOptionTradingHistoryRequest {
    string account_number = 1; // 계좌번호
    string password = 2; // 비밀번호
    FutureOptionSep option_sep = 3; // 옵션 구분 코드
    Date start_date = 4; // 조회시작일
    Date end_date = 5; // 조회종료일
}

message FutureOptionTradingHistory {
    Date order_date = 1; // 주문일자
    string stock_code = 2; // 종목코드
    string classification = 3; // 선물옵션매매구분명
    int32 transaction_amount = 4; // 체결수량
    int32 price = 5; // 체결단가
    int32 total_amount = 6; // 체결금액
    int32 pnl = 7; // 매매손익금액
    int32 fee = 8; // 수수료
    string medium = 9; // 매체구분명
}

message FutureOptionTradingHistoryResponse {
    repeated FutureOptionTradingHistory list = 1;
}


/*
        2.3 업무 기타 TR
*/

/* 계좌목록조회 (AccountList) */

message AccountListResponse {
    repeated string list = 1; // 계좌번호
}

/* 예수금전환 (SACA108U1) */

message TransferDepositRequest {
    string account_number = 1; // 계좌번호
    string withdrawal_item_number = 2; // 출금항목번호
    string password = 3; // 비밀번호
    string deposit_item_number = 4; // 입금항목번호
    int32 transfer_amount = 5; // 이체금액
}

message TransferDepositResponse {
    int32 date = 1; // 일자
    string withdrawal_number = 2; // 출금출납번호
    string deposit_number = 3; // 입금출납번호
    string withdrawal_item_number = 4; // 출금상품번호
    string deposit_item_number = 5; // 입금상품번호
    int32 transfer_amount = 6; // 이체금액
}

/* 전환가능예수금조회 (SACA111Q1) */

message LookupTransferableDepositRequest {
    string account_number = 1; // 계좌번호
    string item_number = 2; // 상품번호
    string password = 3; // 비밀번호
}

message LookupTransferableDepositResponse {
    string number = 1; // 상품
    string name = 2; // 상품명
    int32 total_deposit = 3; // 총예수금
    int32 use_margin = 4; // 사용증거금
    int32 withdrawable_amount = 5; // 출금가능액
}
